--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ footer-text: Copyright (c) -2048
 #
 
 # 输入Disqus shortname，即可添加评论区，请查阅文档，设置自己的disqus站点，不要继续使用我的站点loffer
-disqus: yufeng #shortname
+disqus: #shortname
 
 # 输入Gitalk相关设定，即可添加评论区，具体请看教程
 gitalk:
